--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "rdndmb-html5-to-touch": "^8.1.2",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-multi-backend": "^8.1.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
