--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "moment": "^2.30.1",
     "rdndmb-html5-to-touch": "^8.1.2",
     "react": "^18.3.1",
+    "react-day-picker": "^9.5.1",
     "react-dnd": "^16.0.1",
     "react-dnd-multi-backend": "^8.1.2",
     "react-dom": "^18.3.1",
