--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "firebase": "^11.4.0",
     "moment": "^2.30.1",
     "rdndmb-html5-to-touch": "^8.1.2",
     "react": "^18.3.1",
