--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@reduxjs/toolkit": "^2.5.0",
     "firebase": "^11.4.0",
     "lodash": "^4.17.21",
