--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^11.4.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "motion": "^12.6.2",
     "rdndmb-html5-to-touch": "^8.1.2",
     "react": "^18.3.1",
     "react-day-picker": "^9.5.1",
